update(page): overflow hidden to fix h-scroll

--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -13,7 +13,7 @@ a {
 }
 
 #page {
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .nopad {
